Fix bleeding video in mobile

--- a/docs/src/css/nav/sticky/sticky.css
+++ b/docs/src/css/nav/sticky/sticky.css
@@ -42,3 +42,7 @@ nav ul li:hover {
   width: 100vw;
   min-height: 100vh;
 }
+
+.blackbg {
+  background-color: black;
+}
